# MeowServerManager

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
msm/: __init__.py  cli.py  config.py  downloader.py  manifest.py  remover.py  resolver.py  server.py
msm/providers/: __init__.py  curseforge.py  modrinth.py
