[project]
name = "msm"
version = "1.0.0"
description = "MeowServerManager — CLI tool for Minecraft modpack management"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "tomli-w>=1.1.0",
]

[project.scripts]
msm = "msm.cli:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["msm*"]
